<?xml version="1.0"?>
<package format="2">
  <name>ur5_control</name>
  <version>0.0.0</version>
  <description>The ur5_control package</description>

  <maintainer email="root@todo.todo">root</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>gazebo_msgs</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>trajectory_msgs</build_export_depend>
  <build_export_depend>gazebo_msgs</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>


  <export>
  </export>

</package>
